# connec4mewo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
connec4mewo/: CMakeLists.txt  connec4mewo.cpp  connec4mewo.h
